--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -24,7 +24,7 @@ eureka:
         prefer-ip-address: true
     client:
         service-url:
-            defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+            defaultZone: https://admin:${jhipster.registry.password}@registry-server-byta.herokuapp.com/eureka/
 
 spring:
     profiles:
@@ -70,9 +70,15 @@ spring:
             hibernate.cache.hazelcast.use_lite_member: true
     data:
         elasticsearch:
-            properties:
-                path:
-                    home: target/elasticsearch
+           cluster-name: elasticsearch
+           cluster-nodes: http://35.237.193.86:9200
+           properties:
+               path:
+                   logs: target/elasticsearch/log
+                   data: target/elasticsearch/data
+        jest:
+           readTimeout: 10000
+           uri: http://35.237.193.86:9200
     liquibase:
         contexts: dev
     mail:
