--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -39,7 +39,7 @@ eureka:
             git-branch: ${git.branch:}
 ribbon:
     eureka:
-        enabled: false
+        enabled: true
 # See http://cloud.spring.io/spring-cloud-netflix/spring-cloud-netflix.html
 zuul: # those values must be configured depending on the application specific needs
     sensitive-headers: Cookie,Set-Cookie #see https://github.com/spring-cloud/spring-cloud-netflix/issues/3126
