--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -20,11 +20,11 @@ logging:
         com.diviso.graeshoppe: DEBUG
 
 eureka:
-    instance:
+    instance:byta-tech.herokuapp.com
         prefer-ip-address: true
     client:
         service-url:
-            defaultZone: https://admin:${jhipster.registry.password}@registry-server-byta.herokuapp.com/eureka/
+            defaultZone: https://admin:${jhipster.registry.password}@byta-tech.herokuapp.com/eureka/
 
 spring:
     profiles:
