--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 
 	<dependencies>
 	<dependency>
+  <groupId>com.braintreepayments.gateway</groupId>
+  <artifactId>braintree-java</artifactId>
+  <version>2.103.0</version>
+</dependency>
+	<dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-messaging</artifactId>
         </dependency>
