--- a/pom.xml
+++ b/pom.xml
@@ -982,11 +982,11 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-undertow</artifactId>
 				</dependency>
-				<dependency>
+				<!-- <dependency>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-devtools</artifactId>
 					<optional>true</optional>
-				</dependency>
+				</dependency> -->
 			</dependencies>
 			<build>
 				<plugins>
@@ -1056,11 +1056,11 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-undertow</artifactId>
 				</dependency>
-				<dependency>
+				<!-- <dependency>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-devtools</artifactId>
 					<optional>true</optional>
-				</dependency>
+				</dependency> -->
 			</dependencies>
 			<build>
 				<plugins>
@@ -1209,11 +1209,11 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-undertow</artifactId>
 				</dependency>
-				<dependency>
+				<!-- <dependency>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-devtools</artifactId>
 					<optional>true</optional>
-				</dependency>
+				</dependency> -->
 			</dependencies>
 			<build>
 				<plugins>
