--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -230,6 +230,9 @@ report:
    
 payment:
    url: dev.ci2.divisosofttech.com:9090
-   
+socket:
+   server:
+      host: dev.ci2.divisosofttech.com
+      port: 9999
 
    
