--- a/pom.xml
+++ b/pom.xml
@@ -428,6 +428,19 @@
 		<defaultGoal>spring-boot:run</defaultGoal>
 		<plugins>
 
+<plugin>
+            <groupId>com.lazerycode.jmeter</groupId>
+            <artifactId>jmeter-maven-plugin</artifactId>
+            <version>2.1.0</version>
+            <executions>
+                <execution>
+                    <id>jmeter-tests</id>
+                    <goals>
+                        <goal>jmeter</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 			<!-- Kafka plgins avro -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
