--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -205,7 +205,7 @@ kafka:
     key.deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
     value.deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
     bootstrap.servers: dev.servers.divisosofttech.com:9092
-    group.id: customerappgateway
+    group.id: customerappgatewayx
     specific.avro.reader: true
     auto.offset.reset: earliest
     schema.registry.url: http://dev.servers.divisosofttech.com:8081
