--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,57 +1,60 @@
 {
-    "generator-jhipster": {
-        "promptValues": {
-            "packageName": "com.diviso.graeshoppe"
-        },
-        "jhipsterVersion": "5.8.2",
-        "applicationType": "gateway",
-        "baseName": "customergateway",
-        "packageName": "com.diviso.graeshoppe",
-        "packageFolder": "com/diviso/graeshoppe",
-        "serverPort": "8070",
-        "authenticationType": "oauth2",
-        "cacheProvider": "hazelcast",
-        "enableHibernateCache": true,
-        "websocket": false,
-        "databaseType": "sql",
-        "devDatabaseType": "mysql",
-        "prodDatabaseType": "mysql",
-        "searchEngine": "elasticsearch",
-        "messageBroker": false,
-        "serviceDiscoveryType": "eureka",
-        "buildTool": "maven",
-        "enableSwaggerCodegen": false,
-        "clientFramework": "angularX",
-        "useSass": true,
-        "clientPackageManager": "npm",
-        "testFrameworks": [],
-        "jhiPrefix": "jhi",
-        "entitySuffix": "",
-        "dtoSuffix": "DTO",
-        "otherModules": [],
-        "enableTranslation": false
+  "generator-jhipster": {
+    "promptValues": {
+      "packageName": "com.diviso.graeshoppe"
     },
-    "generator-jhipster-swagger-cli": {
-        "apis": {
-            "store": {
-                "spec": "http://34.74.142.114:8071/v2/api-docs"
-            },
-            "order": {
-                "spec": "http://dev.ci2.divisosofttech.com:8088/v2/api-docs"
-            },
-            "payment": {
-                "spec": "http://dev.ci2.divisosofttech.com:9090/v2/api-docs"
-            },
-            "offer": {
-                "spec": "http://dev.ci2.divisosofttech.com:8095/Offer/v2/api-docs"
-            },
-            "customer": {
-                "spec": "http://dev.ci1.divisosofttech.com:8088/v2/api-docs"
-            }
-        },
-        "promptValues": {
-            "inputSpec": "http://dev.ci1.divisosofttech.com:8088/v2/api-docs",
-            "cliName": "customer"
-        }
+    "jhipsterVersion": "5.8.2",
+    "applicationType": "gateway",
+    "baseName": "customergateway",
+    "packageName": "com.diviso.graeshoppe.customerappgateway",
+    "packageFolder": "com/diviso/graeshoppe/customerappgateway",
+    "serverPort": "8070",
+    "authenticationType": "oauth2",
+    "cacheProvider": "hazelcast",
+    "enableHibernateCache": true,
+    "websocket": false,
+    "databaseType": "sql",
+    "devDatabaseType": "mysql",
+    "prodDatabaseType": "mysql",
+    "searchEngine": "elasticsearch",
+    "messageBroker": false,
+    "serviceDiscoveryType": "eureka",
+    "buildTool": "maven",
+    "enableSwaggerCodegen": false,
+    "clientFramework": "angularX",
+    "useSass": true,
+    "clientPackageManager": "npm",
+    "testFrameworks": [],
+    "jhiPrefix": "jhi",
+    "entitySuffix": "",
+    "dtoSuffix": "DTO",
+    "otherModules": [],
+    "enableTranslation": false
+  },
+  "generator-jhipster-swagger-cli": {
+    "apis": {
+      "store": {
+        "spec": "http://34.74.142.114:8071/v2/api-docs"
+      },
+      "order": {
+        "spec": "http://dev.ci2.divisosofttech.com:8088/v2/api-docs"
+      },
+      "payment": {
+        "spec": "http://dev.ci2.divisosofttech.com:9090/v2/api-docs"
+      },
+      "offer": {
+        "spec": "http://dev.ci2.divisosofttech.com:8095/Offer/v2/api-docs"
+      },
+      "customer": {
+        "spec": "http://dev.ci1.divisosofttech.com:8088/v2/api-docs"
+      },
+      "administration": {
+        "spec": "http://dev.ci3.divisosofttech.com:8081/v2/api-docs"
+      }
+    },
+    "promptValues": {
+      "inputSpec": "http://dev.ci3.divisosofttech.com:8081/v2/api-docs",
+      "cliName": "administration"
     }
+  }
 }
